backend/2. !!KubeFiles!! for msa services/config-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: msa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: <ACCOUNT_ID>.dkr.ecr.ap-northeast-2.amazonaws.com/config-server:1.0.0
          ports:
            - containerPort: 8888
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 60
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: msa
spec:
  selector:
    app: config-server
  ports:
    - port: 8888
      targetPort: 8888
  type: ClusterIP
