backend/2. !!KubeFiles!! for msa services/notification-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: msa
  labels:
    app: notification-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: <ACCOUNT_ID>.dkr.ecr.ap-northeast-2.amazonaws.com/notification-service:TAG
          ports:
            - containerPort: 8085
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8085
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8085
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: msa
  labels:
    app: notification-service
spec:
  selector:
    app: notification-service
  ports:
    - port: 8085
      targetPort: 8085
  type: ClusterIP
